--- a/Data-Science/src/eda.ipynb
+++ b/Data-Science/src/eda.ipynb
@@ -33,8 +33,8 @@
     }
    ],
    "source": [
-    "df = pd.read_csv('./data/dataset_churn_challenge.csv')\n",
-    "df_zonas = pd.read_csv('./data/dataset_churn_zona_challenge.csv')"
+    "df = pd.read_csv('../data/dataset_churn_challenge.csv')\n",
+    "df_zonas = pd.read_csv('../data/dataset_churn_zona_challenge.csv')"
    ]
   },
   {
